# fdrive

./: .gitignore  CMakeLists.txt  partitions.csv  ti_ads131m06_viewer.html
components/ads131m06/: CMakeLists.txt  adc_sense.cpp
components/ads131m06/include/: adc_sense.h  ads131m06.h
components/can_queue/: CMakeLists.txt  can_queue.cpp
components/can_serial_bridge/: CMakeLists.txt  usb_can_bridge.cpp
components/command_router/: CMakeLists.txt  command_router.cpp
components/config_store/: CMakeLists.txt  config_store.cpp
fdrive_py/: README.md  pyproject.toml  sitecustomize.py
fdrive_py/src/fdrive_py/: __init__.py  driver_config_cli.py  fdrive_gui.py  joystick_can_control.py
fdrive_py/src/fdrive_py/cli/: __init__.py  common.py  driver_config.py  joystick_can_control.py
fdrive_py/src/fdrive_py/driver_host/: __init__.py  config_profile.py  driver_interface.py  factory.py  protocol.py  serial_backend.py  socketcan_backend.py  transport.py
fdrive_py/src/fdrive_py/gui/: __init__.py  config_panel.py  connection_panel.py  discovery.py  gauges.py  joystick_panel.py  main_window.py  session.py  status_widget.py
fdrive_py/tests/: test_config_profile.py  test_driver_interface.py  test_factory_and_cli.py  test_gui_session.py
main/: CMakeLists.txt  can_driver.cpp  can_driver.h  drive_config_store.cpp  drive_config_store.h  drive_control.cpp  drive_control.h  drive_management.cpp  drive_management.h  drive_protocol.h  h_bridge_driver.cpp  h_bridge_driver.h  idf_component.yml  led_ind.cpp  led_ind.h  main.cpp  sense_service.cpp  sense_service.h
(+5 files in other folders)
